--- a/Franquisia1.1/Views/UndAtencion/Consumos.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Consumos.cshtml
@@ -38,7 +38,7 @@
                     <div class="col-xs-6">Total:<label id="tabla-factura-total">-</label></div>
                 </div>
                 <div class="btn-group btn-group-sm btn-group-justified">
-                    <a class="btn btn-sm btn-warning" href="/UndAtencion/Index">Regresar</a>
+                    <a class="btn btn-sm btn-warning" href="/UndAtencion/Index"><span class="glyphicon glyphicon-arrow-left"></span> Regresar</a>
                     <a id="factura-pre-factura" class="btn btn-default"><i class="glyphicon glyphicon-print"></i></a>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     }
                     else
                     {<a id="cambiar-undatencion" class="btn btn-secundario btn-secundario-bordes" style="font-size:0.9em;">Cambiar Und. Atención</a>}
-                    <a class="btn btn-danger" href="/Home/OffLogin">Salir</a>
+                    <a class="btn btn-danger" href="/Home/OffLogin"><span class="glyphicon glyphicon-remove"></span> Salir</a>
                 </div>
                 <div class="pull-right">
                     <img class="img-responsive logo" src="/Content/images/logo.png" alt="Neinco">
