--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -76,7 +76,7 @@
                 <div style="padding-top:5px;"></div>
                 <div class="btn-group btn-group-xs btn-group-justified">
                     <a id="anular-factura" class="btn btn-danger">Anular</a>
-                    <a class="btn btn-sm btn-warning" href="/UndAtencion/Index"><span class="glyphicon glyphicon-arrow-left"></span> Regresar</a>
+                    <a class="btn btn-sm btn-warning" href="/UndAtencion/Regresar?c=@ViewBag.conc.CODIGO"><span class="glyphicon glyphicon-arrow-left"></span> Regresar</a>
                 </div>
             </div>
         </div>
