--- a/Franquisia1.1/Content/estilos.css
+++ b/Franquisia1.1/Content/estilos.css
@@ -12,6 +12,9 @@ header{
     font-size:2em;
     border-bottom: 3px solid #c0392b;
 }
+textarea{
+    resize: none;
+}
 
 .field-validation-error {
     color: #f00;
