--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -213,16 +213,14 @@
                                     <label>Importe: </label>
                                     <input type="text" id="input-importe" class="form-control-static"/>
                                 </div>
-                                <div id="modal-pagar-principal">
-                                </div>
+                                <div id="modal-pagar-principal"></div>
                             </div>
-                            <div id="modal-pagar-secundario" class="col-sm-6">
-                            </div>
+                            <div id="modal-pagar-secundario" class="col-sm-6"></div>
                         </div>
                     </div>
+                    <br />
                     <div class="row">
-                        <button id="form-pagar-btn-aceptar" class="btn btn-danger">Aceptar</button>
-                        <button id="forma-pago-agregar" class="btn btn-success" data-codforma="">Agregar</button>
+                        <button id="form-pagar-btn-aceptar" class="btn btn-danger btn-block">Aceptar</button>
                     </div>
                 </div>
             </div>
@@ -270,52 +268,18 @@
                 <div class="panel panel-body">
                     <div class="row">
                         <div class="col-sm-3">
-                            <div id="group-tipane" class="btn-group btn-group-vertical">
-
-
-                                <div class="btn btn-default">
-                                    <input name="tipo-anexo" type="radio" class="hide" />wadwad
-                                </div>
-                                <div class="btn btn-default">
-                                    <input name="tipo-anexo" type="radio" class="hide" />wadwad
-                                </div>
-                                <div class="btn btn-default">
-                                    <input name="tipo-anexo" type="radio" class="hide" />wadwad
-                                </div>
-
+                            <div id="group-tipane" class="btn-group btn-group-vertical btn-block">
+                                @foreach (var item in ViewBag.cm)
+                                {
+                                    <div class="btn btn-default">
+                                        <input name="tipo-cm" type="radio" class="hide" data-desc="@item.desmaesgen" data-codigo="@item.clavemaesgen" />@item.parm1maesgen
+                                    </div>
+                                }
                             </div>
                         </div>
                         <div class="col-sm-9">
-                            <div id="modal-crearane-principal" class="form form-horizontal">
-                                <div class="form-group">
-                                    <div class="row col-sm-6">
-                                        <label id="lbl-nrodoc">DNI:</label>
-                                        <input id="input-nrodoc" type="number" class="form-control" />
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <label>Nombre 1:</label>
-                                            <input id="input-nom1" type="number" class="form-control" />
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <label>Nombre 2:</label>
-                                            <input id="input-nom1" type="number" class="form-control" />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Dirección</label>
-                                    <textarea id="form-actruc-refane" rows="2" class="form-control" placeholder="Ingrese dirección"></textarea>
-                                </div>
-                                
-
-
-                                <div class="form-group">
-                                    <button class="btn btn-primary">Guardar</button>
-                                </div>
-                            </div>
+                            <div id="modal-crearane-body" class="form form-horizontal"></div>
+                            <div class="row"><button id="modal-crear-anexo-submit" class="btn btn-primary btn-block">Guardar</button></div>
                         </div>
                     </div>
                 </div>
