--- a/Franquisia1.1/Views/UndAtencion/Index.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Punto de Venta";
 }
-<header class="text-center" >
+<header>
     El Chalan S.A.C
     <div class="pull-right">
         <a class="btn btn-danger" href="/Home/OffLogin"><span class="glyphicon glyphicon-remove"></span> Salir</a>
