--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -272,7 +272,7 @@
                                 @foreach (var item in ViewBag.cm)
                                 {
                                     <div class="btn btn-default">
-                                        <input name="tipo-cm" type="radio" class="hide" value="@item.clavemaesge" data-desc="@item.desmaesgen" data-codigo="@item.clavemaesgen" />@item.parm1maesgen
+                                        <input name="tipo-cm" type="radio" class="hide" value="@item.clavemaesgen" data-desc="@item.desmaesgen" data-codigo="@item.clavemaesgen" />@item.parm1maesgen
                                     </div>
                                 }
                             </div>
