--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -262,7 +262,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <label>Agregar Cliente</label> <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <label id="modal-crearane-titulo"></label> <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
                 <div class="panel panel-body">
