cambiosprint pre fac

--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -219,6 +219,9 @@
                             </div>
                             <div id="modal-pagar-secundario" class="col-sm-6"></div>
                         </div>
+                        <div class="checkbox-inline">
+                            <label><input id="print-prefact" type="checkbox" value="" checked> Imprimir Prefactura</label>
+                        </div>
                     </div>
                     <br />
                     <div class="row">
