--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -242,8 +242,8 @@
                 <div class="panel">
                     <div class="form-group"><input id="txtBuscar" type="text" class="form-control " placeholder="Buscar" autofocus autocomplete="on"/></div>
                     <div class="btn-group btn-group-justified">
-                        <a id="btn-buscar-razon" class="btn btn-warning">Por Razón Social/Apellido y Nombres</a>
-                        <a id="btn-buscar-ruc" class="btn btn-info">Por RUC/ DNI</a>
+                        <a id="btn-buscar-razon" class="btn btn-warning" data-val="razon">Por Razón Social/Apellido y Nombres</a>
+                        <a id="btn-buscar-ruc" class="btn btn-info" data-val="ruc">Por RUC/ DNI</a>
                     </div>
                 </div>
                 <div class="panel div-scroll">
