--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -5,7 +5,7 @@
             <div class="row ">
                 <div class="row">
                     <div class="col-sm-6">
-                        Division:
+                        División:
                         <select id="divatencion" class="col-sm-6 form-control input-sm" disabled>
                             @if (ViewBag.divisiones.Count == 0){<option value="">Sin Elementos</option>}
                             @foreach (var div in ViewBag.divisiones){<option value="@div.CODIGO">@div.DESCRIPCION</option>}
@@ -100,8 +100,7 @@
                         Pto. Emisión:
                         <select id="puntos-emision" class="info-divider-inverse">
                             @foreach (var punemi in ViewBag.puntosemision)
-                            {
-                            <option value="@punemi.codigo">@punemi.descripcion</option>}
+                            {<option value="@punemi.codigo">@punemi.descripcion</option>}
                         </select>
                     </label>
                 </div>
@@ -171,13 +170,9 @@
                     <label>Total a pagar: S/. </label> <label id="form-pagar-total"></label>
                     <div class="row">
                         <table id="tabla-forma-pago" class="table table-striped table-bordered table-condensed small">
-                            <thead>
-                                <tr><th>Forma de venta</th><th>Forma de pago</th><th>Tipo tarjeta</th><th>Nro. de referencia</th><th>Importe</th></tr>
-                            </thead>
+                            <thead><tr><th>Forma de venta</th><th>Forma de pago</th><th>Tipo tarjeta</th><th>Nro. de referencia</th><th>Importe</th></tr></thead>
                             <tbody></tbody>
-                            <tfoot>
-                                <tr><td class="text-right" colspan="4"><label>Importe pagado</label></td><td><label id="forma-pago-total">0.00</label></td></tr>
-                            </tfoot>
+                            <tfoot><tr><td class="text-right" colspan="4"><label>Importe pagado</label></td><td><label id="forma-pago-total">0.00</label></td></tr></tfoot>
                         </table>
                     </div>
                     <div class="row">
@@ -202,31 +197,22 @@
                     </div>
                     <div class="form form-horizontal">
                         <div class="form-group">
-                            <div class="pull-left">
-                                <label>Forma de venta: </label><label id="forventa"></label>
-                            </div>
-                            <div class="pull-right">
-                                <label>Forma de pago: </label><label id="forpago"></label>
-                            </div>
+                            <div class="pull-left"><label>Forma de venta: </label><label id="forventa"></label></div>
+                            <div class="pull-right"><label>Forma de pago: </label><label id="forpago"></label></div>
                         </div>
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label>Importe: </label>
-                                    <input type="text" id="input-importe" class="form-control-static"/>
+                                    <label>Importe: </label> <input type="text" id="input-importe" class="form-control-static"/>
                                 </div>
                                 <div id="modal-pagar-principal"></div>
                             </div>
                             <div id="modal-pagar-secundario" class="col-sm-6"></div>
                         </div>
-                        <div class="checkbox-inline">
-                            <label><input id="print-prefact" type="checkbox" value="" checked> Imprimir Prefactura</label>
-                        </div>
+                        <div class="checkbox-inline"><label><input id="print-prefact" type="checkbox" checked> Imprimir Prefactura</label></div>
                     </div>
                     <br />
-                    <div class="row">
-                        <button id="form-pagar-btn-aceptar" class="btn btn-danger btn-block">Aceptar</button>
-                    </div>
+                    <div class="row"><button id="form-pagar-btn-aceptar" class="btn btn-danger btn-block">Aceptar</button></div>
                 </div>
             </div>
         </div>
@@ -248,14 +234,7 @@
                 </div>
                 <div class="panel div-scroll">
                     <table id="tabla-seleccionar-anexo" class='table table-hover'>
-                        <thead>
-                            <tr>
-                                <th>Descripción</th>
-                                <th>Tipo</th>
-                                <th>Número</th>
-                                <th>Dirección</th>
-                            </tr>
-                        </thead>
+                        <thead><tr><th>Descripción</th><th>Tipo</th><th>Número</th><th>Dirección</th></tr></thead>
                         <tbody></tbody>
                     </table>
                 </div>
@@ -278,9 +257,7 @@
                         </div>
                     }
                 </div>
-                <div class="panel panel-body" style="padding-bottom:0;">
-                    <div id="ane-body" class="form form-horizontal"></div>
-                </div>
+                <div class="panel panel-body" style="padding-bottom:0;"><div id="ane-body" class="form form-horizontal"></div></div>
                 <button id="modal-anexo-submit" class="btn btn-primary btn-block">Guardar</button>
             </div>
         </div>
@@ -333,11 +310,7 @@
         </div>
     </div>
 </div>
-<div class="hide">
-    <label id="divate">@ViewBag.div</label>
-    <label id="undate">@ViewBag.und</label>
-    <label id="perate">@ViewBag.per</label>
-</div>
+<div class="hide"><label id="divate">@ViewBag.div</label><label id="undate">@ViewBag.und</label><label id="perate">@ViewBag.per</label><label id="punemi">@Session["Loged_usrfile_punemi"].ToString()</label></div>
 @section Scripts{
     @Scripts.Render("~/bundles/aplicacion")
     @Scripts.Render("~/bundles/app")
