--- a/Franquisia1.1/Content/estilos.css
+++ b/Franquisia1.1/Content/estilos.css
@@ -170,4 +170,10 @@ input[type=checkbox] {
 .logo{
     padding-top:5px;
     padding-bottom:5px;
+    margin-right:5px;
+}
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
 }
