--- a/Franquisia1.1/Views/Home/Consulta.cshtml
+++ b/Franquisia1.1/Views/Home/Consulta.cshtml
@@ -3,67 +3,55 @@
 }
 <header>
     El Chalan S.A.C.
-    <div class="pull-right"><img src="/Content/images/logo.png" alt="Neinco" class="img-responsive center-block" /></div>
-
+    <div class="pull-right"><a href="http://www.neinco.com"><img src="/Content/images/logo.png" alt="Neinco" class="img-responsive logo" /></a></div>
 </header>
 <div class="container">
-
     <div class="row">
-       
-        <h3 class="text-center">Consultar Factura Electrónica</h3>
-        <div class="col-xs-10 col-sm-7 center-block no-float">
-            
+        <h3 class="text-center">Consulta de Documentos</h3>
+        <div class="col-xs-10 col-sm-9 col-md-7 center-block no-float">
             <form action="/Home/Consulta" method="post" class="form form-horizontal">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="form-group">
-                            <label for="">Número de documento</label>
-                            <input type="text" name="nrodoc" class="form-control" required/>
-                        </div>
+                @Html.AntiForgeryToken()
+                @if (ViewBag.msg_error != null)
+                {
+                    <div class="alert alert-danger">
+                        <ul><li>@ViewBag.msg_error</li></ul>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="form-group">
-                            <label for="">Tipo de documento</label>
-                            <input type="text" name="tipdoc" class="form-control" required />
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="form-group">
-                            <label for="">RUC</label>
-                            <input type="number" name="ruc" class="form-control" required/>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="form-group">
-                            <label for="">Fecha</label>
-                            <input type="date" name="fecha" class="form-control" required/>
-                        </div>
+                }
+                else
+                { <h1>sadsad</h1>}
+                <div class="row form-group-sm" >
+                    <div class="col-xs-12 col-sm-5">
+                        <label for="">Tipo de Documento</label>
+                        <select name="tipdoc" class="form-control">
+                            @foreach (var item in ViewBag.tipdocs)
+                            {<option value="@item.clavemaesgen">@item.parm1maesgen</option>}
+                        </select>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="form-group">
-                            <label for="">Importe</label>
-                            <input type="number" min="0" name="importe" class="form-control" required />
-                        </div>
+                <div class="row form-group-sm" >
+                    <div class="col-xs-6 col-sm-3">
+                        <label for="">Serie</label>
+                        <input type="text" name="serie" class="form-control" required  autofocus/>
+                    </div>
+                    <div class="col-xs-6 col-sm-4 pull-right">
+                        <label for="">Correlativo</label>
+                        <input type="text" name="correlativo" class="form-control" required />
                     </div>
                 </div>
-                <div class="form-group">
-                    <input type="submit" value="Consultar" class="btn btn-primary" />
+                <div class="row form-group-sm">
+                    <div class="col-xs-6 col-sm-5">
+                        <label for="">Fecha de Emisión</label>
+                        <input type="date" name="fecha" class="form-control" required />
+                    </div>
+                    <div class="col-xs-6 col-sm-4 pull-right">
+                        <label for="">Monto Total</label>
+                        <input type="number" min="0" name="importe" class="form-control" step="any" required />
+                    </div>
+                </div>
+                <div class="form-group-sm"><br />
+                    <input type="submit" value="Ver Documento" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
-    @if (ViewBag.nrodoc!=null)
-    {
-        <div class="row">
-            @ViewBag.nrodoc
-            @ViewBag.tipdoc, @ViewBag.ruc, @ViewBag.fecha, @ViewBag.importe
-            <label>dadawdawda</label>
-        </div>
-    }
-    
-
 </div>
