--- a/Franquisia1.1/Views/Home/Documento.cshtml
+++ b/Franquisia1.1/Views/Home/Documento.cshtml
@@ -11,7 +11,7 @@
     .bordes {
         border: 2px solid #0D47A1;
     }
-    hr .hrcolor{
+    hr{
         color: #666;
         background-color: #32d7e6;
         margin-top: 10px;
@@ -25,14 +25,22 @@
 </header>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-10 col-sm-9 col-md-8 center-block no-float">
+        <div class="col-xs-12 col-sm-9 col-md-8 center-block no-float">
             <div class="panel">
-                <a  class="btn btn-sm btn-primary pull-right"><span class="glyphicon glyphicon-download-alt"></span></a>
+                <form action="/Home/Download" method="post">
+                    @Html.AntiForgeryToken()
+                    <input type="hidden" name="tipdoc" value="@ViewBag.td" required />
+                    <input type="hidden" name="serie" value="@ViewBag.serie" required />
+                    <input type="hidden" name="correlativo" value="@ViewBag.correlativo" required />
+                    <input type="hidden" name="fecha" value="@ViewBag.fecha" required />
+                    <input type="hidden" name="importe" value="@ViewBag.total" step="any" required />
+                    <button class="btn btn-sm btn-primary pull-right"><span class="glyphicon glyphicon-download-alt"></span></button>
+                </form>
                 <a href="/Home/Consulta" class="btn btn-sm btn-primary pull-left"><span class="glyphicon glyphicon-arrow-left"></span></a>
                 <div class="col-xs-9 col-sm-4 col-md-4 center-block no-float">
-                    <form class="form form-inline input-group input-group-sm" method="post">
+                    <form action="/Home/SendMail"  method="post" class="form form-inline input-group input-group-sm">
                         @Html.AntiForgeryToken()
-                        <input type="email" name="email" placeholder="Enviar por email" class="form-control" required/>
+                        <input type="email" name="email" placeholder="Enviar por email" class="form-control" required />
                         <span class="input-group-btn">
                             <button class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-send"></span></button>
                         </span>
@@ -78,7 +86,7 @@
             </div>
             <div class="panel bordes">
                 <div class="panel-body">
-                    <div class="col-xs-12 col-sm-7 col-md-8">
+                    <div class="col-xs-6 col-sm-7 col-md-8">
                         SON: <label>@ViewBag.totalstr</label>
                         <div class="text-center">
                             <hr />
@@ -87,7 +95,7 @@
                         </div>
                         Autorizado mediante resolución de intendencia @ViewBag.cia.resintendencia
                     </div>
-                    <div class="col-xs-12 col-sm-5 col-md-4">
+                    <div class="col-xs-6 col-sm-5 col-md-4">
                         <table id="op" class="table table-condensed">
                             <tr><td>Op. Gavada @ViewBag.abrevia </td><td>@ViewBag.gravado.ToString("#,##0.00")</td></tr>
                             <tr><td>Op. Inafectas @ViewBag.abrevia </td><td>@ViewBag.inafecto.ToString("#,##0.00")</td></tr>
